# openfhe-development_lsh

./: CHANGELOG.md  CMakeLists.txt  README.md  smart_collect.sh
code_chunks/: 0_summary.txt  1_headers_and_interfaces.txt  2_implementations.txt  3_build_config.txt  4_key_algorithms.txt
lsh/: CMakeLists.txt  git-push.sh  train.jsonl  修改记录.md
lsh/test/: softmax_eval.cpp
src/core/include/math/: chebyshev.h
src/core/include/utils/: memory.h
src/core/lib/math/: chebyshev.cpp
src/core/lib/utils/: memory.cpp
src/pke/: CMakeLists.txt
src/pke/examples/: ckks-scale.cpp  discrete_ckks.cpp  function-evaluation.cpp  knn.cpp  knn_all.cpp  knn_backup.cpp  lsh-test-helloworld.cpp  simple-ckks-bootstrapping.cpp  simple-real-numbers.cpp  softmax_eval.cpp  sorting_eval.cpp  spruBTS.cpp
src/pke/include/: constants-defs.h  cryptocontext.h  gen-cryptocontext.h  homoencrypt-compute.h  openfhe.h  slotstocoeffs-utils.h
src/pke/include/nonlinearfunction/: network-sorting.h  permutation-sorting.h  sorting-method.h  sorting-utils.h
src/pke/include/scheme/ckksrns/: ckksrns-advancedshe.h  ckksrns-fhe.h
src/pke/include/schemebase/: base-advancedshe.h  base-fhe.h  base-leveledshe.h  base-scheme.h
src/pke/lib/: ciphertext-utils.cpp  constants-impl.cpp  cryptocontext.cpp  homoencrypt-compute.cpp  poly-utils.cpp  slotstocoeffs-utils.cpp
src/pke/lib/encoding/: ckkspackedencoding.cpp
src/pke/lib/nonlinearfunction/: network-sorting.cpp  permutation-sorting.cpp  sorting-method.cpp
src/pke/lib/scheme/ckksrns/: ckksrns-advancedshe.cpp  ckksrns-fhe.cpp  ckksrns-leveledshe.cpp  ckksrns-parametergeneration.cpp  ckksrns-scheme.cpp  ckksrns-schemeswitching.cpp
src/pke/lib/schemebase/: base-leveledshe.cpp
src/pke/lib/schemerns/: rns-pke.cpp
src/pke/workplace/application/knn/: knn.cpp  knn_all.cpp  knn_backup.cpp
src/pke/workplace/discreteCKKS/: discrete_ckks.cpp  stc_cts_bts_test.cpp  stc_cts_test.cpp
src/pke/workplace/discreteCKKS/spruBTS/: spruBTS.cpp
src/pke/workplace/nonlinearFunction/: cheb_coeff.cpp
src/pke/workplace/nonlinearFunction/softmax/: softmax_eval.cpp
src/pke/workplace/nonlinearFunction/sorting/: sorting_eval.cpp
